tests/bad/array_literal_mismatch_types.oc
/// fail: Expected type str, but got u32

def main() {
    let foo = ["hello", 3]
}